<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="btn_pick_image">Pick Image</string>
    <string name="btn_analyze">Analyze</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_result">Image Result</string>
    <string name="prediction">Hasil Prediksi</string>
    <string name="tooltip_save_to_history">Save to History</string>
    <string name="save_to_history_button">Save to History Button</string>
    <string name="news_image">News Image</string>
    <string name="detail_news">Detail News</string>
    <string name="btn_read_more">Read More</string>
</resources>